# kryptorious-gitsweep

./: README.md  pyproject.toml
src/gitsweep/: __init__.py  cli.py  commands.py
