[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kryptorious-gitsweep"
version = "1.1.0"
description = "Git repository cleanup CLI — find stale branches, large files, and bloated history."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Kryptorious Quantum Biosciences, Inc."}]
dependencies = ["gitpython>=3.1", "rich>=13.0", "click>=8.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=23.0", "ruff>=0.1"]

[project.scripts]
gitsweep = "gitsweep.cli:main"

[project.urls]
Homepage = "https://devflow.sh"
Repository = "https://github.com/kryptorious/gitsweep"

[tool.setuptools.packages.find]
where = ["src"]
